// City Trivia Quiz Database Schema
// Prisma ORM — SQLite (local file). Uniqueness is enforced via @@unique; no extra @@index for dev-scale data.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

// ============================================================================
// ENUMS
// ============================================================================

enum ContinentType {
  AFRICA
  ANTARCTICA
  ASIA
  EUROPE
  NORTH_AMERICA
  OCEANIA
  SOUTH_AMERICA
  ALL
}

// ============================================================================
// MODELS
// ============================================================================

model User {
  id                    String    @id @default(uuid())
  username              String    @unique
  email                 String    @unique
  passwordHash          String    @map("password_hash")
  isVerified            Boolean   @default(false) @map("is_verified")
  verificationToken     String?   @map("verification_token")
  verificationExpiresAt DateTime? @map("verification_expires_at")
  createdAt             DateTime  @default(now()) @map("created_at")
  quizRuns              QuizRun[]

  @@map("users")
}

model City {
  id                     String        @id @default(uuid())
  continent              ContinentType
  name                   String
  country                String
  normalizedAnswer       String        @map("normalized_answer")
  satelliteImageData     Bytes?        @map("satellite_image_data")
  satelliteImageMimeType String?       @map("satellite_image_mime_type")
  description            String?
  hint1                  String?       @map("hint_1")
  hint2                  String?       @map("hint_2")
  isActive               Boolean       @default(true) @map("is_active")
  createdAt              DateTime      @default(now()) @map("created_at")
  quizRounds             QuizRound[]

  @@unique([continent, country, name], name: "uq_cities_continent_country_name")
  @@map("cities")
}

model QuizRun {
  id         String        @id @default(uuid())
  userId     String        @map("user_id")
  continent  ContinentType
  scoreTotal Int           @default(0) @map("score_total")
  numRounds  Int           @default(5) @map("num_rounds")
  startedAt  DateTime      @default(now()) @map("started_at")
  endedAt    DateTime?     @map("ended_at")
  user       User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  rounds     QuizRound[]

  @@map("quiz_runs")
}

model QuizRound {
  id                String            @id @default(uuid())
  quizRunId         String            @map("quiz_run_id")
  cityId            String            @map("city_id")
  roundOrder        Int               @map("round_order")
  pointsEarned      Int               @default(0) @map("points_earned")
  isCorrect         Boolean           @default(false) @map("is_correct")
  resolvedTryNumber Int?              @map("resolved_try_number")
  gaveUp            Boolean           @default(false) @map("gave_up")
  createdAt         DateTime          @default(now()) @map("created_at")
  quizRun           QuizRun           @relation(fields: [quizRunId], references: [id], onDelete: Cascade)
  city              City              @relation(fields: [cityId], references: [id], onDelete: Restrict)
  submissions       RoundSubmission[]

  @@unique([quizRunId, roundOrder], name: "uq_quiz_rounds_run_order")
  @@unique([quizRunId, cityId], name: "uq_quiz_rounds_run_city")
  @@map("quiz_rounds")
}

model RoundSubmission {
  id                    String    @id @default(uuid())
  roundId               String    @map("round_id")
  tryNumber             Int       @map("try_number")
  typedAnswerRaw        String?   @map("typed_answer_raw")
  typedAnswerNormalized String?   @map("typed_answer_normalized")
  isCorrect             Boolean   @default(false) @map("is_correct")
  isGivenUp             Boolean   @default(false) @map("is_given_up")
  submittedAt           DateTime  @default(now()) @map("submitted_at")
  round                 QuizRound @relation(fields: [roundId], references: [id], onDelete: Cascade)

  @@unique([roundId, tryNumber], name: "uq_round_submissions_round_try")
  @@map("round_submissions")
}
